# coding-agent

./: .gitignore  fs_ops.py  notebook.ipynb  pyproject.toml
django_template/: pyproject.toml
django_template/myproject/: settings.py  urls.py
django_template/templates/: base.html
todo/: README.md
todo/myapp/: admin.py  models.py  views.py
todo/myapp/migrations/: 0001_initial.py
todo/myapp/templates/: edit_todo.html  home.html
todo/myproject/: urls.py
todo/templates/: base.html
