[project]
name = "coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.2",
    "django>=6.0.6",
    "jupyter>=1.1.1",
    "python-dotenv>=1.2.2",
    "toyaikit>=0.0.11",
    "uv>=0.11.21",
]

[tool.uv.workspace]
members = [
    "django_template",
]
